<resources>

    <!-- スタート画面 -->
    <string name="app_name">TangoFlash</string>
    <string name="start_btn">スタート</string>
    <string name="list_btn">問題一覧</string>

    <!-- クイズ画面 -->
    <string name="count_label">Q%d</string>
    <string name="japanese_label">日本語日本語日本語</string>
    <string name="english_label">EnglishEnlighEnglish</string>
    <string name="turn_btn">めくる</string>
    <string name="next_btn">次へ</string>

    <!-- 結果画面 -->
    <string name="result_title">結果</string>
    <string name="result_score">%d /5</string>
    <string name="return_btn">もう一回</string>

    <!-- 登録・編集画面 -->
    <string name="quiz_label">日本語</string>
    <string name="answer_label">英語</string>
    <string name="ins_upd_button">登録</string>

</resources>