<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/japaneseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/japanese_label"
        android:textSize="24sp"
        android:layout_marginTop="60dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turnBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/turn_btn"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:onClick="turnCard"
            tools:ignore="OnClick" />

    <Button
            android:id="@+id/nextBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/next_btn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:onClick="nextCard" />
    </LinearLayout>

    <TextView
        android:id="@+id/englishLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_label"
        android:textSize="24sp"
        android:layout_marginTop="60dp" />

</LinearLayout>